--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
-  text-align: center;
+h1 {
+  font-size: 7rem;
+  color: white;
+  text-shadow: 0px 0px 5px black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+section {
+  font-size: 2rem;
+  padding: 2rem;
+  background-color: #333;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.wrapper {
+  height: 100vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+  perspective: 100px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  z-index: -1;
 }
+
+.background-1,
+.background-2,
+.background-3,
+.background-4 {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  object-fit: cover; /* auto formats images to container size */
+  z-index: -1;
+}
+
+.background-4 {
+  transform: translateZ(-100px) scale(2);
+}
+
+.background-3 {
+  transform: translateZ(-75px) scale(1.75);
+}
+
+.background-2 {
+  transform: translateZ(-50px) scale(1.5);
+}
+
+.background-1 {
+  transform: translateZ(-25px) scale(1.25);
+}
+
+/*  |(user)|------ 100px ------- |(monitor)| ------- -100px ------- |(sky pic)|    */
+
+/*         |------------------------ 200px -------------------------|              */
